<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="pokemon"
            type="com.line.pokedex.model.Pokemon" />

        <variable
            name="details"
            type="com.line.pokedex.model.PokemonDetails" />

        <variable
            name="vm"
            type="com.line.pokedex.ui.details.DetailsViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_600">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="6dp"
                    android:translationZ="100dp"
                    app:onBackPressed="@{true}"
                    app:srcCompat="@drawable/arrow" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pokemon_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@{pokemon.name}"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:translationZ="100dp"
                    tools:text="Pokemon"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/index"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_gravity="end"
                    android:text="@{details != null ? details.idString : @string/loading}"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:translationZ="100dp"
                    tools:text="#001"/>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/header"
                android:layout_width="260dp"
                android:layout_height="260dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/circle"
                android:elevation="12dp">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="190dp"
                    android:layout_height="190dp"
                    android:layout_gravity="center"
                    android:scaleType="center"
                    android:translationZ="100dp"
                    app:glideImage="@{pokemon.image}"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/weight_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weight"
                        android:textColor="@color/grey_800"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{details != null ? details.weightString : @string/loading}"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/blue_600"
                        tools:text="24.0 KG" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">


                    <TextView
                        android:id="@+id/height_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/height"
                        android:textColor="@color/grey_800"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{details != null ? details.heightString : @string/loading}"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/blue_600"
                        tools:text="11 M" />

                </LinearLayout>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/stats_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/base_stats"
                        android:textColor="@color/grey_800"
                        android:textSize="24sp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/hp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:text="@string/hp"
                            android:textSize="16sp"
                            android:textColor="@color/grey_800"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/stats_title" />

                        <TextView
                            android:id="@+id/hp_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@{details != null ? details.hpString : @string/loading}"
                            android:textColor="@color/grey_800"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/attack"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:text="@string/atk"
                            android:textSize="16sp"
                            android:textColor="@color/grey_800"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/stats_title" />

                        <TextView
                            android:id="@+id/attack_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@{details != null ? details.attackString : @string/loading}"
                            android:textColor="@color/grey_800"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/defense"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:text="@string/def"
                            android:textSize="16sp"
                            android:textColor="@color/grey_800"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/stats_title" />

                        <TextView
                            android:id="@+id/defense_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@{details != null ? details.defenseString : @string/loading}"
                            android:textColor="@color/grey_800"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:text="@string/spd"
                            android:textSize="16sp"
                            android:textColor="@color/grey_800"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/stats_title" />

                        <TextView
                            android:id="@+id/speed_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@{details != null ? details.speedString : @string/loading}"
                            android:textColor="@color/grey_800"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>